@@ -1,9 +1,11 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2021 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * https://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *    IBM Corporation - initial API and implementation
@@ -25,7 +27,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import org.codehaus.plexus.component.annotations.Component;
 import org.eclipse.osgi.container.ModuleCapability;
@@ -158,7 +159,7 @@ public class DependencyComputer {
             return Collections.emptyList();
         }
         return module.getWiring().getRequiredModuleWires(BundleNamespace.BUNDLE_NAMESPACE).stream()
-                .map(ModuleWire::getProvider).collect(Collectors.toList());
+                .map(ModuleWire::getProvider).toList();
     }
 
     private static Optional<ModuleRevision> getFragmentHost(ModuleRevision bundleRevision) {
@@ -233,7 +234,7 @@ public class DependencyComputer {
      */
     private Collection<ModuleWire> getRequiredModuleWiresWithVisibilityReexport(ModuleWiring wiring) {
         return wiring.getRequiredModuleWires(BundleNamespace.BUNDLE_NAMESPACE).stream()
-                .filter(DependencyComputer::hasVisibilityReexport).collect(Collectors.toList());
+                .filter(DependencyComputer::hasVisibilityReexport).toList();
     }
 
     private void addAggregatePackageSource(ModuleCapability packageCap, String packageName, ModuleWire wire,
@@ -325,7 +326,7 @@ public class DependencyComputer {
             return Collections.emptyList();
         }
         return host.getWiring().getProvidedModuleWires(HostNamespace.HOST_NAMESPACE).stream()
-                .map(ModuleWire::getRequirer).collect(Collectors.toList());
+                .map(ModuleWire::getRequirer).toList();
     }
 
     private void addDependency(ModuleRevision desc, Collection<ModuleRevision> added, VisiblePackages visiblePackages,
@@ -392,10 +393,9 @@ public class DependencyComputer {
     public List<AccessRule> computeBootClasspathExtraAccessRules(ModuleContainer container) {
         ModuleRevision systemBundle = container.getModule(Constants.SYSTEM_BUNDLE_ID).getCurrentRevision();
         return systemBundle.getWiring().getProvidedModuleWires(HostNamespace.HOST_NAMESPACE).stream()
-                .map(ModuleWire::getRequirer)
-                .flatMap(systemFragment -> systemFragment.getDeclaredCapabilities(PackageNamespace.PACKAGE_NAMESPACE)
-                        .stream())
-                .map(packageExport -> createRule(systemBundle, packageExport)).collect(Collectors.toList());
+                .map(ModuleWire::getRequirer).flatMap(systemFragment -> systemFragment
+                        .getDeclaredCapabilities(PackageNamespace.PACKAGE_NAMESPACE).stream())
+                .map(packageExport -> createRule(systemBundle, packageExport)).toList();
     }
 
     private static boolean isDiscouragedAccess(BundleRevision bundle, Capability export) {
