@@ -1,9 +1,11 @@
 /*******************************************************************************
  * Copyright (c) 2008, 2021 Sonatype Inc. and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * https://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *    Sonatype Inc. - initial API and implementation
@@ -13,6 +15,7 @@ package org.eclipse.tycho.core.osgitools.targetplatform;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -26,15 +29,15 @@ import java.util.SortedMap;
 import java.util.TreeMap;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
+import org.eclipse.equinox.p2.metadata.IInstallableUnit;
 import org.eclipse.tycho.ArtifactDescriptor;
 import org.eclipse.tycho.ArtifactKey;
 import org.eclipse.tycho.ArtifactType;
 import org.eclipse.tycho.DefaultArtifactKey;
+import org.eclipse.tycho.DependencyArtifacts;
 import org.eclipse.tycho.PackagingType;
 import org.eclipse.tycho.ReactorProject;
-import org.eclipse.tycho.artifacts.DependencyArtifacts;
 import org.eclipse.tycho.core.osgitools.DefaultArtifactDescriptor;
 import org.osgi.framework.Version;
 
@@ -50,19 +53,19 @@ public class ArtifactCollection {
     }
 
     public List<ArtifactDescriptor> getArtifacts(Predicate<ArtifactKey> filter) {
-        return artifacts.entrySet().stream().filter(entry -> filter.test(entry.getKey())).map(Entry::getValue)
-                .collect(Collectors.toList());
+        return artifacts.entrySet().stream().filter(entry -> filter.test(entry.getKey())).map(Entry::getValue).toList();
     }
 
     public List<ArtifactDescriptor> getArtifacts() {
         return new ArrayList<>(artifacts.values());
     }
 
-    public void addArtifactFile(ArtifactKey key, File location, Set<Object> installableUnits) {
+    public void addArtifactFile(ArtifactKey key, File location, Collection<IInstallableUnit> installableUnits) {
         addArtifact(new DefaultArtifactDescriptor(key, location, null, null, installableUnits));
     }
 
-    public void addArtifactFile(ArtifactKey key, Supplier<File> location, Set<Object> installableUnits) {
+    public void addArtifactFile(ArtifactKey key, Supplier<File> location,
+            Collection<IInstallableUnit> installableUnits) {
         addArtifact(new DefaultArtifactDescriptor(key, whatever -> location.get(), null, null, installableUnits));
     }
 
@@ -75,12 +78,12 @@ public class ArtifactCollection {
             throw new IllegalAccessError();
         }
 
-        ArtifactKey key = normalizePluginType(artifact.getKey());
+        ArtifactKey normalizedKey = normalizeKey(artifact.getKey());
 
-        ArtifactDescriptor original = artifacts.get(key);
+        ArtifactDescriptor original = artifacts.get(normalizedKey);
 
-        Set<Object> units = null;
-
+        Collection<IInstallableUnit> units;
+        Collection<IInstallableUnit> artifactIUs = artifact.getInstallableUnits();
         if (original != null) {
             // can't use DefaultArtifactDescriptor.equals because artifact.location is not normalized
             if (!Objects.equals(original.getClassifier(), artifact.getClassifier())
@@ -90,43 +93,81 @@ public class ArtifactCollection {
             }
 
             // artifact equals to original
-            if (Objects.equals(original.getInstallableUnits(), artifact.getInstallableUnits())) {
+            Collection<IInstallableUnit> originalIUs = original.getInstallableUnits();
+            if (unitSetCompare(artifactIUs, originalIUs)) {
+                if (original instanceof DefaultArtifactDescriptor def) {
+                    if (original.getLocation(false) == null) {
+                        //they equal but maybe we can fetch the file form the other one because it is already resolved?
+                        if (original.getMavenProject() == null) {
+                            def.setMavenProject(artifact.getMavenProject());
+                        }
+                        File newLocation = artifact.getLocation(false);
+                        if (newLocation != null) {
+                            def.resolve(newLocation);
+                            registerArtifactLocation(newLocation, original);
+                        }
+                    }
+                }
                 return;
             }
-
             if (!merge) {
-                // TODO better error message
-                throw new IllegalStateException("Inconsistent artifact with key " + artifact.getKey());
+                if (artifactIUs.size() != originalIUs.size()) {
+                    throw new IllegalStateException("Inconsistent artifact with key " + artifact.getKey()
+                            + " number of IUs differ in size, existing IUs=" + originalIUs + ", artifact IUs="
+                            + artifactIUs);
+                }
+                if (artifactIUs.size() == 1 && originalIUs.size() == 1) {
+                    IInstallableUnit artifactUnit = artifactIUs.iterator().next();
+                    IInstallableUnit originalUnit = originalIUs.iterator().next();
+                    throw new IllegalStateException("Inconsistent artifact with key " + artifact.getKey()
+                            + " existing IU = " + originalUnit + ", artifact IU = " + artifactUnit);
+                }
+                throw new IllegalStateException("Inconsistent artifact with key " + artifact.getKey() + "existing IUs="
+                        + originalIUs + ", artifact IUs=" + artifactIUs);
             }
 
-            units = new LinkedHashSet<>(original.getInstallableUnits());
-            units.addAll(artifact.getInstallableUnits());
+            units = new LinkedHashSet<>(originalIUs);
+            units.addAll(artifactIUs);
         } else {
-            units = artifact.getInstallableUnits();
+            units = artifactIUs;
         }
 
-        // reuse artifact keys to reduce memory usage
-        key = normalize(key);
-
         if (units != null) {
-            units = Collections.unmodifiableSet(units);
+            units = Collections.unmodifiableCollection(units);
         }
 
         // recreate artifact descriptor to use normalized location, key and units
         File location = artifact.getLocation(false);
         ArtifactDescriptor normalizedArtifact = location != null
-                ? new DefaultArtifactDescriptor(key, location, artifact.getMavenProject(), artifact.getClassifier(),
-                        units)
-                : new DefaultArtifactDescriptor(key, thisArtifact -> {
+                ? new DefaultArtifactDescriptor(normalizedKey, location, artifact.getMavenProject(),
+                        artifact.getClassifier(), units)
+                : new DefaultArtifactDescriptor(normalizedKey, thisArtifact -> {
                     File resolvedLocation = artifact.getLocation(true);
                     registerArtifactLocation(resolvedLocation, thisArtifact);
                     return resolvedLocation;
                 }, artifact.getMavenProject(), artifact.getClassifier(), units);
 
-        artifacts.put(artifact.getKey(), normalizedArtifact);
+        artifacts.put(normalizedKey, normalizedArtifact);
         if (location != null) {
             registerArtifactLocation(location, normalizedArtifact);
         }
+    }
+
+    private boolean unitSetCompare(Collection<IInstallableUnit> unitsA, Collection<IInstallableUnit> unitsB) {
+        if (unitsA == null) {
+            unitsA = Collections.emptyList();
+        }
+        if (unitsB == null) {
+            unitsB = Collections.emptyList();
+        }
+        //usual and easy case ...
+        if (unitsA.size() == 1 && unitsB.size() == 1) {
+            IInstallableUnit a = unitsA.iterator().next();
+            IInstallableUnit b = unitsB.iterator().next();
+            return Objects.equals(a, b);
+        }
+        //if more then we create sets and compare them ...
+        return Set.copyOf(unitsB).equals(Set.copyOf(unitsA));
     }
 
     private void registerArtifactLocation(File location, ArtifactDescriptor normalizedArtifact) {
@@ -160,11 +201,14 @@ public class ArtifactCollection {
         return key;
     }
 
-    protected ArtifactKey normalizePluginType(ArtifactKey key) {
+    private ArtifactKey normalizeKey(ArtifactKey key) {
         // normalize eclipse-test-plugin... after all, a bundle is a bundle.
         // TODO ArtifactKey should never use packaging types
         if (PackagingType.TYPE_ECLIPSE_TEST_PLUGIN.equals(key.getType())) {
             key = new DefaultArtifactKey(ArtifactType.TYPE_ECLIPSE_PLUGIN, key.getId(), key.getVersion());
+        }
+        if (!(key instanceof DefaultArtifactKey)) {
+            return new DefaultArtifactKey(key.getType(), key.getId(), key.getVersion());
         }
         return key;
     }
@@ -228,7 +272,7 @@ public class ArtifactCollection {
     }
 
     public void addReactorArtifact(ArtifactKey key, ReactorProject project, String classifier,
-            Set<Object> installableUnits) {
+            Collection<IInstallableUnit> installableUnits) {
         DefaultArtifactDescriptor artifact = new DefaultArtifactDescriptor(key, project.getBasedir(), project,
                 classifier, installableUnits);
         addArtifact(artifact);
@@ -256,7 +300,7 @@ public class ArtifactCollection {
     }
 
     public ArtifactDescriptor getArtifact(ArtifactKey key) {
-        return artifacts.get(normalizePluginType(key));
+        return artifacts.get(normalizeKey(key));
     }
 
     public void removeAll(String type, String id) {
