@@ -13,12 +13,15 @@ import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Set;
 
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
+import org.apache.maven.plugins.annotations.Component;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
@@ -26,7 +29,10 @@ import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
 import org.eclipse.tycho.ArtifactDescriptor;
 import org.eclipse.tycho.ReactorProject;
+import org.eclipse.tycho.ResolvedArtifactKey;
+import org.eclipse.tycho.core.TychoProject;
 import org.eclipse.tycho.core.osgitools.DefaultReactorProject;
+import org.eclipse.tycho.core.osgitools.OsgiBundleProject;
 import org.eclipse.tycho.core.utils.TychoProjectUtils;
 
 /**
@@ -43,10 +49,13 @@ public class ListDependenciesMojo extends AbstractMojo {
     @Parameter(property = "skip")
     private boolean skip;
 
+    @Component(role = TychoProject.class)
+    private Map<String, TychoProject> projectTypes;
+
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
         if (skip) {
-            getLog().info("Skipped");
+            getLog().info("Execution was skipped");
             return;
         }
         File outputFile = new File(project.getBuild().getDirectory(), "dependencies-list.txt");
@@ -56,23 +65,43 @@ public class ListDependenciesMojo extends AbstractMojo {
         } catch (IOException ex) {
             throw new MojoFailureException(ex.getMessage(), ex);
         }
+        Set<String> written = new HashSet<>();
         try (BufferedWriter writer = Files.newBufferedWriter(outputFile.toPath())) {
             List<ArtifactDescriptor> dependencies = TychoProjectUtils
                     .getDependencyArtifacts(DefaultReactorProject.adapt(project)).getArtifacts().stream()
                     .filter(desc -> !desc.getLocation(true).equals(project.getBasedir())) // remove self
-                    .collect(Collectors.toList());
+                    .toList();
             for (ArtifactDescriptor dependnecy : dependencies) {
                 if (dependnecy.getMavenProject() == null) {
-                    writer.write(dependnecy.getLocation(true).getAbsolutePath());
+                    File location = dependnecy.getLocation(true);
+                    writeLocation(writer, location, written);
                 } else {
                     ReactorProject otherProject = dependnecy.getMavenProject();
-                    writer.write(otherProject.getArtifact(dependnecy.getClassifier()).getAbsolutePath());
+                    writeLocation(writer, otherProject.getArtifact(dependnecy.getClassifier()), written);
                 }
-                writer.write('\n');
+            }
+            TychoProject projectType = projectTypes.get(project.getPackaging());
+            if (projectType instanceof OsgiBundleProject bundleProject) {
+                Map<String, ResolvedArtifactKey> artifacts = bundleProject
+                        .getAnnotationArtifacts(DefaultReactorProject.adapt(project));
+                for (ResolvedArtifactKey artifactDescriptor : artifacts.values()) {
+                    writeLocation(writer, artifactDescriptor.getLocation(), written);
+                }
             }
         } catch (IOException e) {
             getLog().error(e);
             throw new MojoExecutionException(e.getMessage(), e);
+        }
+    }
+
+    private void writeLocation(BufferedWriter writer, File location, Set<String> written) throws IOException {
+        if (location == null) {
+            return;
+        }
+        String path = location.getAbsolutePath();
+        if (written.add(path)) {
+            writer.write(path);
+            writer.write(System.lineSeparator());
         }
     }
 
